--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,10 @@ a {
     color-scheme: dark;
   }
 }
+
+.main-component {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
